# selenium_tutorial

./: .gitignore  README.md  pyproject.toml
lesson_10/: download.py  upload.py
lesson_11/: explicit_wait.py  implicit_wait.py  locators.py
lesson_12/: become_human.py
lesson_13/: alerts.py  locators.py
lesson_14/: work_wich_cookies.py
lesson_15/: checkboxes.py
lesson_16/: dropdown.py
lesson_2/: 1_chromedriver.py  2_geckodriver.py
lesson_3/: navigation.py
lesson_4/: date_and_validate.py
lesson_5/: find_elements.py
lesson_6/: find_elements_practics.py
lesson_8/: click.py
lesson_9/: browser_optionals.py
